--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.22.0"
+    "@playwright/test": "^1.22.0",
+    "ts-node": "^10.7.0"
   }
 }
