--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,9 +16,12 @@ jobs:
         with:
           node-version: '14.x'
       - name: Set env
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-            echo "USERNAME=${{ secrets.USERNAME }}" >> $GITHUB_ENV
-            echo "PASSWORD=${{ secrets.PASSWORD }}" >> $GITHUB_ENV
+          echo "USERNAME=${{ secrets.USERNAME }}" >> $GITHUB_ENV
+          echo "PASSWORD=${{ secrets.PASSWORD }}" >> $GITHUB_ENV
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
