--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,5 +24,5 @@ jobs:
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
-        run: npx playwright test
+        run:  npx playwright test tests/main.ts
 
