only run main.ts

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,5 +26,5 @@ jobs:
           PASSWORD: ${{ secrets.PASSWORD }}
           USERNAME_PPM: ${{ secrets.USERNAME_PPM }}
           PASSWORD_PPM: ${{ secrets.PASSWORD_PPM }}
-        run: npx playwright test
+        run: npx playwright test tests/main.ts
 
